# pre-commit-hook-yamlfmt

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  TESTING.md  package-lock.json  package.json  pyproject.toml
.circleci/: config.yml
.github/: release-drafter.yml  renovate.json
.github/workflows/: default.yml  on-pr-target-opened.yml  on-pr.yml  on-push.yml  release-management.yml  spell-check.yml
ci/: multidoc-after.yaml
pre_commit_hooks/: yamlfmt.py
