[tool.poetry]
name = "pre-commit-hook-yamlfmt"
version = "0.2.1"
description = "YAML formatter for http://pre-commit.com."
license = "Apache-2.0"
authors = ["Kyle Finley <kyle@finley.sh>"]
readme = "README.md"
homepage = "https://github.com/ITProKyle/pre-commit-hook-yamlfmt"
repository = "https://github.com/ITProKyle/pre-commit-hook-yamlfmt"
keywords = ["pre-commit"]
packages = [
  { include = "pre_commit_hooks" },
]

[tool.poetry.dependencies]
python = "^3.8.1"

"ruamel.yaml" = "^0.17.21"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.23"  # flake8 plugin
flake8-comprehensions = "^3.12.0"  # flake8 plugin
flake8-docstrings = "^1.7.0"  # flake8 plugin
flake8-use-fstring = "^1.4"  # flake8 plugin
isort = "^5.12.0"
mock = "^5.0.2"
pep8-naming = "^0.13.3"  # flake8 plugin
pre-commit = "^3.3.1"
pydocstyle = "^6.3.0"  # flake8 plugin
pylint = "^2.17.3"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"  # pytest plugin
pytest-mock = "^3.10.0"  # pytest plugin
pytest-sugar = "^0.9.7"  # pytest plugin
pytest-xdist = "^3.2.1"  # pytest plugin

[tool.poetry.scripts]
yamlfmt = "pre_commit_hooks.yamlfmt:main"


[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"


[tool.black]
force-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ["py38", "py39"]


[tool.coverage.report]
exclude_lines = [
  "cov: ignore",  # standard exclude comment
  "if TYPE_CHECKING:",  # excluded blocks
  "if __name__ == .__main__.:",
  "raise AssertionError",  # defensive exceptions
  "raise NotImplementedError",
  "from pathlib import Path",
  "@overload",
]
# fail_under = 90  # set a minimum coverage percentage
precision = 2
show_missing = true

[tool.coverage.run]
omit = [
  "*/type_defs.py",  # assuming this would not contain any logic
]


[tool.isort]
profile = "black"
skip = [
  ".eggs",
  ".git",
  ".runway",
  ".serverless",
  ".venv",
  "_build",
  "build",
  "dist",
  "node_modules",
]


[tool.pylint.basic]
good-names = [
  "_",
  "a",
  "b",
  "ca",
  "ci",
  "db",
  "f",
  "fn",
  "i",
  "id",
  "j",
  "k",
  "ok",
  "s3",
  "ui",
  "up",
  "v",
]

[tool.pylint.classes]
defining-attr-methods = ["__init__", "__new__"]

[tool.pylint.design]
max-args = 50
max-attributes = 50
max-bool-expr = 5
max-branches = 20
max-locals = 25
max-parents = 10
max-public-methods = 30
max-returns = 6
max-statements = 50
min-public-methods = 0

[tool.pylint.format]
max-line-length = 100
max-module-lines = 1000

[tool.pylint.imports]
allow-wildcard-with-all = "no"

[tool.pylint.logging]
logging-format-style = "old"

[tool.pylint.main]
disable = [
  "line-too-long",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "similarities",
  "ungrouped-imports",
]
jobs = 0

[tool.pylint.miscellaneous]
notes = [
  "FIXME",
]

[tool.pylint.reports]
msg-template = "{path}:{line}:{column}: {msg_id}: {msg} ({symbol})"
output-format = "colorized"
score = "yes"


[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/.eggs",
  "**/.git",
  "**/.runway",
  "**/.venv",
  "**/docs",
  "**/node_modules",
  "**/typings",
]
pythonVersion = "3.8"
reportDuplicateImport = "none"
reportImportCycles = "none"
reportIncompatibleMethodOverride = "warning"
reportMissingTypeStubs = "warning"
reportPrivateUsage = "none"
reportUnknownMemberType = "none"
reportUnnecessaryIsInstance = "warning"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportWildcardImportFromLibrary = "none"
strictParameterNoneValue = false
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
venv = ".venv"


[tool.pytest.ini_options]
addopts = [
  "--cov-config=pyproject.toml",
  "--no-cov-on-fail",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::pytest_mock.PytestMockWarning",
]
markers = [
  "wip: isolate tests currently being worked on.",
]
minversion = 6.2
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
